--- a/src/gui.html
+++ b/src/gui.html
@@ -74,7 +74,7 @@
                     type="primary" class="regular"
                     size="small"
                     @click="command('preview_pipeline')">
-                <i class="zmdi zmdi-slideshow mr5"></i>Preview entire pipeline
+                <i class="zmdi zmdi-slideshow mr5"></i>Preview pipeline
             </el-button>
         </div>
     </sly-card>
