--- a/src/gui.html
+++ b/src/gui.html
@@ -84,7 +84,7 @@
                     @click="command('preview_pipeline')">
                 <i class="zmdi zmdi-slideshow mr5"></i>Preview pipeline
             </el-button>
-<!--            :plain="true"-->
+            <!--            :plain="true"-->
             <el-button
                     style="margin-left: 5px;"
                     type="primary" class="regular" size="small"
@@ -93,6 +93,31 @@
                 <i class="zmdi zmdi-floppy mr5"></i></i>Export
             </el-button>
         </div>
+    </sly-card>
+
+    <sly-card class="mt15"
+              title="Export pipeline"
+              subtitle="Save both python representation and json configuration. The latter one can be used for
+              real-time augmentation during NN training.">
+        <sly-field title="Directory" description="Configurations will be saved to Team Files">
+            <sly-icon slot="icon" :options="{ color: '#33c94c', bgColor: '#d9f7e4', rounded: false }">
+                <i class="zmdi zmdi-folder"></i>
+            </sly-icon>
+            <el-input placeholder="Please input destination directory" v-model="state.saveDir"></el-input>
+        </sly-field>
+
+        <sly-field title="Name" description="py and json configurations will be saved with this name">
+            <div class="fflex">
+                <el-input placeholder="Please input pipeline name" v-model="state.saveName"></el-input>
+                <el-button
+                        style="margin-left: 5px;"
+                        :disabled="state.saveName.length === 0"
+                        type="primary" class="regular" size="small"
+                        @click="command('export_pipeline')">
+                    <i class="zmdi zmdi-floppy mr5"></i>Export pipeline
+                </el-button>
+            </div>
+        </sly-field>
     </sly-card>
 
     <div class="fflex mt15" style="align-items: stretch">
